info and fixes for margin-collapsing

--- a/!DATA!/layout.css
+++ b/!DATA!/layout.css
@@ -72,14 +72,6 @@ footer, header, main, nav, section {
     padding: 0;
 }
 
-footer {
-    margin: 1.2rem 0 0;
-}
-
-header {
-    margin: 0 0 1.2rem;
-}
-
 /*  TABLES  */
 
 caption {
@@ -199,7 +191,7 @@ figcaption {
 }
 
 h1 {
-    margin: 0;
+    margin: 0 0 1.2rem;
     padding: 0;
     overflow: hidden;
 }
